[package]
edition = "2021"
license = "MPL-2.0"
name = "dws"
version = "0.1.0"
repository = "https://github.com/dg-continuum/dws"
description = "The first fully opensource Skyblock mod backend lol."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "thin"
strip = false
incremental = true
opt-level = 1
panic = 'unwind'

[dependencies]
anyhow = "1.0.66"
axum = { version = "0.6.0-rc.2", features = ["ws", "macros", "headers"] }
bitflags = "1.3"
cfg-if = "1"
clap = { version = "4.0.26", features = ["derive", "env", "cargo"] }
ctrlc = "3.2"
dioxus = { version = "0.2.4", features = ["ssr"] }
futures-util = { version = "0.3", default-features = false }
governor = "0.5"
once_cell = { version = "1.16", features = ["parking_lot"] }
parking_lot = { version = "0.12", features = ["serde"] }
procfs = { version = "0.14", default-features = false }
reqwest = { version = "0.11", default-features = false, features = [
    "multipart",
    "stream",
    "rustls-tls"
] }
rustrict = "0.5.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "2", features = ["json"] }
serenity = { git = "https://github.com/serenity-rs/serenity", rev = "a01ee32ca77deed1be002ff7a14a53e2d8fac941", default-features = false, features = [
    "builder",
    "http",
    "interactions_endpoint",
    "model",
    "rustls_backend",
] }
tokio = { version = "1.0", features = [
    "tracing",
    "rt-multi-thread",
    "rt",
    "macros",
    "parking_lot",
    "fs",
] }
tower = { version = "0.4", features = [] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.2.1", features = ["v4", "serde"] }

[build-dependencies]
zip = { version = "0.6.3", default-features = false }
walkdir = "2.3.2"
